--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/bd01
 spring.datasource.username=postgres
-spring.datasource.password=sriosher1
+spring.datasource.password=clave
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jackson.default-property-inclusion=NON_NULL
